--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "server": "nodemon server.js",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "echo \"No build step required\""
+    "build": "echo \"No build step required\"",
+    "seed": "node seed-database.js"
   },
   "author": "rudraksh",
   "license": "ISC",
