--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,29 @@
       "dest": "/server.js"
     }
   ],
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "http://localhost:5173"
+        },
+        {
+          "key": "Access-Control-Allow-Credentials",
+          "value": "true"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET,POST,PUT,DELETE,PATCH,OPTIONS"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "Content-Type,Authorization,X-Requested-With,Accept,Origin,Cache-Control,X-File-Name"
+        }
+      ]
+    }
+  ],
   "env": {
     "NODE_ENV": "production"
   }
