--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "build": "echo \"No build step required\"",
-    "seed": "node seed-database.js"
+    "seed": "node seed-database.js",
+    "seed:product-sections": "node scripts/seed-product-sections.js",
+    "verify:product-sections": "node scripts/verify-product-sections.js"
   },
   "engines": {
     "node": ">=18.0.0"
