--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "razorpay": "^2.9.6",
+    "uuid": "^13.0.0",
     "xlsx": "^0.18.5"
   }
 }
